# gazebo_light_sensor

./: README.md
gazebo_light_sensor/: CMakeLists.txt  package.xml
gazebo_light_sensor/include/gazebo_light_sensor/: light_sensor_plugin.hpp  node_parameters_interface.hpp  visibility_control.h
gazebo_light_sensor/src/: custom_gazebo_ros_camera.cpp  light_sensor_plugin.cpp
gazebo_light_sensor/worlds/: lights.world
