<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_light_sensor</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lucky@todo.todo">lucky</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_dev</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <depend>camera_info_manager</depend>
  <depend>image_transport</depend>
  <depend>std_msgs</depend>

  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
